<?xml version="1.0" encoding="utf-8"?>
    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:mask="http://schemas.android.com/apk/res-auto"
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green"
        tools:context=".activities.RegistasiActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="170dp"
                    android:layout_height="39dp"
                    android:layout_marginTop="65dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/register"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    tools:ignore="MissingConstraints"/>

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:layout_marginEnd="60dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/logo"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="@color/iconcolour">

                    <customfonts.MyTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_gravity="center"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:text="Nama : "/>


                        <EditText
                            android:id="@+id/kolomNama"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginStart="55dp"
                            android:imeOptions="actionDone"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:maxLength="30"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            />

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="20dp"
                        android:backgroundTint="@color/iconcolour">

                    <com.vicmikhailau.maskededittext.MaskedEditText
                        android:id="@+id/kolomNomor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:typeface="monospace"
                        android:text="+62-"
                        android:hint="+62-"
                        mask:mask="+62-####-###-####"
                        android:layout_centerInParent="true"/>


                    </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="@color/iconcolour">

                    <EditText
                        android:id="@+id/kolomEmail"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:hint="@string/alamat_email"
                        android:maxLength="30"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        />
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/buttonDaftar"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginStart="70dp"
                    android:layout_marginEnd="70dp"
                    android:gravity="center"
                    android:backgroundTint="@color/Tex"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="@color/White"
                    android:textSize="20sp"
                    android:textStyle="bold" />



            </LinearLayout>

            <Button
                android:id="@+id/buttonMasuk"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="50dp"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="70dp"
                android:backgroundTint="@color/Tex"
                android:text="Login"
                android:textColor="@color/White"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </LinearLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
